edits to instructions

--- a/experiments/3-English-baseline/English-baseline.html
+++ b/experiments/3-English-baseline/English-baseline.html
@@ -53,7 +53,7 @@
 
   <div class="slide" id="instructions">
     <h3>Instructions</h3>
-    <p>You will be given a paragraph long story to read. After you read the story, click "next" and a puppet will comment on the story. <b>The puppet's comment will be in bold below the puppet </b>.  Your goal is to decide whether the puppet is right or wrong in his account of the story. There will be two practice trials before the experiment begins. </p>
+    <p>You will be given a paragraph-long story to read. After you read the story, click "next" and a puppet will comment on the story. <b>The puppet's comment will be in bold below the puppet</b>.  Your goal is to decide whether the puppet is right or wrong in his account of the story. There will be two practice trials before the experiment begins. </p>
     <button onclick="_s.button()">Continue</button>
   </div>
   
