--- a/experiments/5-QUD/QUD.html
+++ b/experiments/5-QUD/QUD.html
@@ -73,17 +73,17 @@
       </script>
     
     <div>
-      <img src = "expt_files/shark.jpg" class = "p_hidden puppet" id = "puppet2" width = "215" >
+      <img src = "expt_files/shark.jpg" class = "p_hidden puppet" id = "puppet2" width = "205" >
         <div class="center">
-      	<p class="p_hidden text">大象问:</p>
+      	<p class="p_hidden text">鲨鱼问:</p>
         <p id="practiceQuestion" class="p_hidden text" style="font-weight: bold;"></p>
-        <p class="p_hidden text">鲨鱼说:</p>
+        <p class="p_hidden text">大象说:</p>
       	<p id="practiceSentence" class="p_hidden text" style="font-weight: bold;"></p>
         </div>
-      <img src = "expt_files/elephant.jpg" class = "p_hidden puppet" id = "puppet1" width = "215"> 
+      <img src = "expt_files/elephant.jpg" class = "p_hidden puppet" id = "puppet1" width = "205"> 
     </div>
 
-    <p class = "p_hidden text"> 鲨鱼说的对吗？</p>
+    <p class = "p_hidden text"> 大象说的对吗？</p>
       <table id="practice_slider" class="slider_table p_hidden text">
         <tr><td class="left p_hidden text">完全错误</td><td class="right p_hidden text">完全正确</td></tr>
         <tr><td colspan="2"><div id="prac_single_slider" class="slider p_hidden text"></div></td></tr>
@@ -117,16 +117,16 @@
     }
     </script>
 	<div>
-      <img src = "expt_files/shark.jpg" class = "hidden puppet" id = "puppet2" width = "215" >
+      <img src = "expt_files/shark.jpg" class = "hidden puppet" id = "puppet2" width = "205" >
         <div class="center">
-        <p class="hidden text">大象问:</p>
+        <p class="hidden text">鲨鱼问:</p>
         <p id="expQUD" class="hidden text" style="font-weight: bold;"></p>
-        <p class="hidden text">鲨鱼说:</p>
+        <p class="hidden text">大象说:</p>
         <p id="testSentence" class="hidden text" style="font-weight: bold;"></p>
         </div>
-      <img src = "expt_files/elephant.jpg" class = "hidden puppet" id = "puppet1" width = "215"> 
+      <img src = "expt_files/elephant.jpg" class = "hidden puppet" id = "puppet1" width = "205"> 
     </div>
-    <p class = "hidden text"> 鲨鱼说的对吗？</p>
+    <p class = "hidden text"> 大象说的对吗？</p>
     <table id="slider_table" class="slider_table hidden">
       <tr><td class="left hidden">完全错误</td><td class="right hidden">完全正确</td></tr>
       <tr><td colspan="2"><div id="single_slider" class="slider hidden"></div></td></tr>
