changes of 8-English-expand

--- a/experiments/7-expanded/QUD.html
+++ b/experiments/7-expanded/QUD.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 
-    <title>5-QUD</title>
+    <title>7-EXPAND</title>
 
     <!--JS-->
 
@@ -73,14 +73,14 @@
       </script>
     
     <div>
-      <img src = "expt_files/shark.jpg" class = "p_hidden puppet" id = "puppet2" width = "205" >
+      <img src = "expt_files/shark.jpg" class = "p_hidden puppet" id = "puppet2" width = "195" >
         <div class="center">
       	<p class="p_hidden text">鲨鱼问:</p>
         <p id="practiceQuestion" class="p_hidden text" style="font-weight: bold;"></p>
         <p class="p_hidden text">大象说:</p>
       	<p id="practiceSentence" class="p_hidden text" style="font-weight: bold;"></p>
         </div>
-      <img src = "expt_files/elephant.jpg" class = "p_hidden puppet" id = "puppet1" width = "205"> 
+      <img src = "expt_files/elephant.jpg" class = "p_hidden puppet" id = "puppet1" width = "195"> 
     </div>
 
     <p class = "p_hidden text"> 大象说的对吗？</p>
@@ -100,7 +100,7 @@
 
   <div class="slide" id="pretrial">
     <h3>练习结束</h3>
-    <p>练习测试现在结束，接下来在正式的实验中有7组测试。</p>
+    <p>练习测试现在结束，接下来在正式的实验中有20组测试。</p>
     <button onclick="_s.button()">继续</button>
   </div>
 
@@ -117,14 +117,14 @@
     }
     </script>
 	<div>
-      <img src = "expt_files/shark.jpg" class = "hidden puppet" id = "puppet2" width = "205" >
+      <img src = "expt_files/shark.jpg" class = "hidden puppet" id = "puppet2" width = "195" >
         <div class="center">
         <p class="hidden text">鲨鱼问:</p>
         <p id="expQUD" class="hidden text" style="font-weight: bold;"></p>
         <p class="hidden text">大象说:</p>
         <p id="testSentence" class="hidden text" style="font-weight: bold;"></p>
         </div>
-      <img src = "expt_files/elephant.jpg" class = "hidden puppet" id = "puppet1" width = "205"> 
+      <img src = "expt_files/elephant.jpg" class = "hidden puppet" id = "puppet1" width = "195"> 
     </div>
     <p class = "hidden text"> 大象说的对吗？</p>
     <table id="slider_table" class="slider_table hidden">
