--- a/experiments/8-expanded-english/english-QUD.html
+++ b/experiments/8-expanded-english/english-QUD.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>6-English-QUD</title>
+    <title>8-English-EXPAND</title>
 
     <!--JS-->
 
@@ -60,7 +60,7 @@
   
   <div class="slide" id="pretrial">
     <h3>End of Practice</h3>
-    <p>The practice trials are now over. There will be 7 more trials to this experiment. </p>
+    <p>The practice trials are now over. There will be 20 more trials to this experiment. </p>
     <button onclick="_s.button()">Continue</button>
   </div>
   
@@ -69,7 +69,7 @@
 	<!-- <button id="play" type = "button" onclick = "playPause()">Play</button> -->
 	<!-- add 'controls' when debugging -->
 	<b> This is a practice trial. </b>
-    <p id="practiceStory" style="font-size: 18"> </p>
+    <p id="practiceStory" style="font-size: 17"> </p>
     <button onclick="p_showButton()" class = "p_showButton">Next</button>
     <script> 
       function p_showButton() {
@@ -79,17 +79,17 @@
     </script>
 
   <div>
-    <img src = "expt_files/shark.jpg" class = "p_hidden puppet" id = "puppet2" width="150">
+    <img src = "expt_files/shark.jpg" class = "p_hidden puppet" id = "puppet2" width="130">
       <div class = "center">
-      <p class="p_hidden text" style="font-size: 18">The shark asked:</p>
-      <p id="practiceQuestion" class="p_hidden text" style="font-weight: bold; font-size: 18"></p>
-      <p class="p_hidden text" style="font-size: 18">The elephant said:</p>
+      <p class="p_hidden text" style="font-size: 17">The shark asked:</p>
+      <p id="practiceQuestion" class="p_hidden text" style="font-weight: bold; font-size: 17"></p>
+      <p class="p_hidden text" style="font-size: 17">The elephant said:</p>
 	<!-- <p><img src = "../_shared/images/puppet.jpg" class = "p_hidden" id = "puppet"></p> -->
-      <p id="practiceSentence" class="p_hidden text" style="font-weight: bold; font-size: 18"></p>
+      <p id="practiceSentence" class="p_hidden text" style="font-weight: bold; font-size: 17"></p>
       </div>
-    <img src = "expt_files/elephant.jpg" class = "p_hidden puppet" id = "puppet1" width = "150"> 
+    <img src = "expt_files/elephant.jpg" class = "p_hidden puppet" id = "puppet1" width = "130"> 
   </div>
-    <p class = "p_hidden text" style="font-size: 18"> Is the elephant right?</p>
+    <p class = "p_hidden text" style="font-size: 17"> Is the elephant right?</p>
     <table id="practice_slider" class="slider_table p_hidden text">
       <tr><td class="left p_hidden text">definitely not</td><td class="right p_hidden text">definitely</td></tr>
       <tr><td colspan="2"><div id="prac_single_slider" class="slider p_hidden text"></div></td></tr>
@@ -107,7 +107,7 @@
   <div class="slide" id="one_slider">
 	<!-- <button id="play" type = "button" onclick = "playPause()">Play</button> -->
 	<!-- add 'controls' when debugging -->
-    <p id="expStory" style="font-size: 18"> </p>
+    <p id="expStory" style="font-size: 17"> </p>
     <button onclick="showButton()" class = "showButton">Next</button>
     <script>
     function showButton() {
@@ -116,16 +116,16 @@
     }
     </script>
   <div>
-    <img src = "expt_files/shark.jpg" class = "hidden puppet" id = "puppet2" width="150">
+    <img src = "expt_files/shark.jpg" class = "hidden puppet" id = "puppet2" width="130">
       <div class = "center">
-      <p class="hidden text" style="font-size: 18">The shark asked:</p>
-      <p id="expQUD" class="hidden text" style="font-weight: bold; font-size: 18"></p>
-      <p class="hidden text" style="font-size: 18">The elephant said:</p>
-      <p id="testSentence" class="hidden text" style="font-weight: bold; font-size: 18"></p>
+      <p class="hidden text" style="font-size: 17">The shark asked:</p>
+      <p id="expQUD" class="hidden text" style="font-weight: bold; font-size: 17"></p>
+      <p class="hidden text" style="font-size: 17">The elephant said:</p>
+      <p id="testSentence" class="hidden text" style="font-weight: bold; font-size: 17"></p>
       </div>
-    <img src = "expt_files/elephant.jpg" class = "hidden puppet" id = "puppet1" width="150">
+    <img src = "expt_files/elephant.jpg" class = "hidden puppet" id = "puppet1" width="130">
   </div>
-	<p class = "hidden" style="font-size: 18">Is the elephant right?</p>
+	<p class = "hidden" style="font-size: 17">Is the elephant right?</p>
     <table id="slider_table" class="slider_table hidden">
       <tr><td class="left hidden">definitely not</td><td class="right hidden">definitely</td></tr>
       <tr><td colspan="2"><div id="single_slider" class="slider hidden"></div></td></tr>
