--- a/experiments/8-expanded-english/english-QUD.html
+++ b/experiments/8-expanded-english/english-QUD.html
@@ -44,7 +44,7 @@
 
   <div class="slide" id="i0" >
     <img src="../_shared/images/meaningLab.png" alt="University of California, Meaning Lab" id="meaningLabLogo"></img>
-    <p>This HIT involves interpreting stories of English. The task should take about five minutes. Please pay attention. Thanks!</p>
+    <p>This HIT involves interpreting stories of English. The task should take about six minutes. Please pay attention. Thanks!</p>
     <button id="start_button" type="button">Start Experiment</button>
 	  <p id="legal">Legal information: By answering the following questions, you are participating in a study being performed by cognitive scientists at the University of California, Irvine. If you have questions about this research, please contact Greg Scontras at <a href="mailto://g.scontras@uci.edu">g.scontras@uci.edu</a>. You must be  at least 18 years old to participate. Your participation in this research is voluntary. You may decline to answer any or all of the following questions. You may decline further participation, at any time, without adverse consequences. Your anonymity is assured; the researchers who have requested your participation will not receive any personal information about you.</p>
 <!--     <p id="instruct-text">You will hear stories followed by a description of the story and be asked to say if the description is right or wrong. The HIT should take 10-15 minutes. Please pay attention, thanks!</p>
@@ -54,7 +54,7 @@
 
   <div class="slide" id="instructions">
     <h3>Instructions</h3>
-    <p>You will be given a paragraph-long story to read. After you read the story, click "next" and a puppet will comment on the story. <b>The puppet's comment will be in bold below the puppet</b>.  Your goal is to decide whether the puppet is right or wrong in his account of the story. There will be two practice trials before the experiment begins. </p>
+    <p>You will be given a short story to read. After you read the story, click "next" and two puppets will discuss the story.  Your goal is to decide whether the second puppet is right or wrong in his account of the story. There will be two practice trials before the experiment begins. </p>
     <button onclick="_s.button()">Continue</button>
   </div>
   
