--- a/experiments/9-english-QUD-revised/english-QUD.html
+++ b/experiments/9-english-QUD-revised/english-QUD.html
@@ -83,9 +83,9 @@
   <div>
     <img src = "expt_files/shark.jpg" class = "p_hidden_question puppet" id = "puppet2" width="130">
       <div class = "center">
-      <p class="p_hidden_question text" style="font-size: 17">The shark asked:</p>
+      <p class="p_hidden_question text" style="font-size: 17">The shark was swimming around when he spotted his elephant friend. The shark asked:</p>
       <p id="practiceQuestion" class="p_hidden_question text" style="font-weight: bold; font-size: 17"></p>
-      <p class="p_hidden_answer text" style="font-size: 17">The elephant said:</p>
+      <p class="p_hidden_answer text" style="font-size: 17">The elephant was happy to see his shark friend. The elephant said:</p>
       <p id="practiceSentence" class="p_hidden_answer text" style="font-weight: bold; font-size: 17"></p>
       </div>
     <img src = "expt_files/elephant.jpg" class = "p_hidden_question puppet" id = "puppet1" width = "130"> 
