--- a/experiments/9-english-QUD-revised/english-QUD.html
+++ b/experiments/9-english-QUD-revised/english-QUD.html
@@ -83,7 +83,7 @@
   <div>
     <img src = "expt_files/shark.jpg" class = "p_hidden_question puppet" id = "puppet2" width="130">
       <div class = "center">
-      <p class="p_hidden_question text" style="font-size: 17">The shark was swimming around when he spotted his friend, elephant. "Hi elephant!", said the shark. Then the shark asked:</p>
+      <p class="p_hidden_question text" style="font-size: 17"><!-- The shark was swimming around when he spotted his friend, elephant. "Hi elephant!", said the shark.  -->Then the shark asked:</p>
       <p id="practiceQuestion" class="p_hidden_question text" style="font-weight: bold; font-size: 17"></p>
 
       <p id="practiceStory" class="p_story" style="font-size: 17"> </p>
@@ -97,7 +97,7 @@
         }
       </script>
 
-      <p class="p_hidden_answer text" style="font-size: 17">The elephant was happy to see his friend, shark. "Hello shark!", said the elephant. Then the elephant said:</p>
+      <p class="p_hidden_answer text" style="font-size: 17"><!-- The elephant was happy to see his friend, shark. "Hello shark!", said the elephant.  -->Then the elephant said:</p>
       <p id="practiceSentence" class="p_hidden_answer text" style="font-weight: bold; font-size: 17"></p>
       </div>
     <img src = "expt_files/elephant.jpg" class = "p_hidden_question puppet" id = "puppet1" width = "130"> 
@@ -129,24 +129,41 @@
   <div class="slide" id="one_slider">
 	<!-- <button id="play" type = "button" onclick = "playPause()">Play</button> -->
 	<!-- add 'controls' when debugging -->
-    <p id="expStory" style="font-size: 17"> </p>
+<div>
+    <img src = "expt_files/shark.jpg" class = "hidden_question puppet" id = "puppet2" width="130">
+      <div class = "center">
+      <p class="hidden_question text" style="font-size: 17">The shark asked:</p>
+      <p id="expQUD" class="hidden_question text" style="font-weight: bold; font-size: 17"></p>
+    <p id="expStory" class="story" style="font-size: 17"> </p>
     <button onclick="showButton()" class = "showButton">Next</button>
     <script>
     function showButton() {
-      $(".hidden").show();
+      $(".hidden_question").show();
       $(".showButton").hide();
+      $(".story").show();
+      $(".show_answer_button").show();
     }
     </script>
-  <div>
+<!--   <div>
     <img src = "expt_files/shark.jpg" class = "hidden puppet" id = "puppet2" width="130">
       <div class = "center">
       <p class="hidden text" style="font-size: 17">The shark asked:</p>
-      <p id="expQUD" class="hidden text" style="font-weight: bold; font-size: 17"></p>
-      <p class="hidden text" style="font-size: 17">The elephant said:</p>
-      <p id="testSentence" class="hidden text" style="font-weight: bold; font-size: 17"></p>
+      <p id="expQUD" class="hidden text" style="font-weight: bold; font-size: 17"></p> -->
+      <p class="hidden_answer text" style="font-size: 17">The elephant said:</p>
+      <p id="testSentence" class="hidden_answer text" style="font-weight: bold; font-size: 17"></p>
       </div>
-    <img src = "expt_files/elephant.jpg" class = "hidden puppet" id = "puppet1" width="130">
+    <img src = "expt_files/elephant.jpg" class = "hidden_answer puppet" id = "puppet1" width="130">
   </div>
+
+  <button onclick="show_answer_button()" class = "show_answer_button">Next</button>
+    <script> 
+      function show_answer_button() {
+          $(".hidden_answer").show();
+          $(".show_answer_button").hide();
+          $(".hidden").show();
+      }
+    </script>
+
 	<p class = "hidden" style="font-size: 17">Is the elephant right?</p>
     <table id="slider_table" class="slider_table hidden">
       <tr><td class="left hidden">definitely not</td><td class="right hidden">definitely</td></tr>
