updated storybook style

--- a/experiments/9-english-QUD-revised/english-QUD.html
+++ b/experiments/9-english-QUD-revised/english-QUD.html
@@ -86,7 +86,10 @@
       <p class="p_hidden_question text" style="font-size: 17"><!-- The shark was swimming around when he spotted his friend, elephant. "Hi elephant!", said the shark.  -->Then the shark asked:</p>
       <p id="practiceQuestion" class="p_hidden_question text" style="font-weight: bold; font-size: 17"></p>
 
-      <p id="practiceStory" class="p_story" style="font-size: 17"> </p>
+      <div id="practiceStory" class="p_story">
+        <p id="practiceStoryStory" class="storyText" style="font-size: 17"> </p> 
+        <p class="number"> Page <span id="pageNumber">XXX</span></p>
+      </div>
       <button onclick="p_showButton()" class = "p_showButton">Next</button>
       <script> 
       function p_showButton() {
