updated puppet position

--- a/experiments/9-english-QUD-revised/english-QUD.html
+++ b/experiments/9-english-QUD-revised/english-QUD.html
@@ -93,6 +93,7 @@
       </div>
     <img src = "expt_files/elephant.jpg" class = "p_hidden_say puppet" id = "puppet1" width = "130">
 
+
   <div>
     <img src = "expt_files/shark.jpg" class = "p_hidden_question puppet" id = "puppet2" width="130">
       <div class = "center">
@@ -105,9 +106,8 @@
           $(".p_hidden_question").show();          
         }
       </script>
-
-      <p class="p_hidden_question text" style="font-size: 17">The shark asked:</p>
-      <p id="practiceQuestion" class="p_hidden_question text" style="font-weight: bold; font-size: 17"></p>
+      <p class="p_hidden_question text" style="font-size: 17; position: relative;left:-20px; top: -90px">The shark asked:</p>
+      <p id="practiceQuestion" class="p_hidden_question text" style="font-weight: bold; font-size: 17; position: relative;left:-20px; top: -90px"></p>
       <p class="p_hidden_answer text" style="font-size: 17">Then the elephant said:</p>
       <p id="practiceSentence" class="p_hidden_answer text" style="font-weight: bold; font-size: 17"></p>
       </div>
