fixed page numbering

--- a/experiments/9-english-QUD-revised/english-QUD.html
+++ b/experiments/9-english-QUD-revised/english-QUD.html
@@ -162,7 +162,7 @@
 
       <div id="expStory" class="story">
         <p id="expStoryStory" class="storyText" style="font-size: 17"> </p> 
-        <p class="number"> Page <span id="pageNumber">XXX</span></p>
+        <p class="number"> Page <span id="pageNumberTest">XXX</span></p>
       </div>
       <img src = "expt_files/elephant.jpg" class = "hidden_listen puppet" id = "puppet1" width = "230">
 
